fix: account dropdown not showing

--- a/global-styles/global.css
+++ b/global-styles/global.css
@@ -65,7 +65,7 @@ a {
     padding-left: 1em;
     padding-right: 1em;
     min-height: 50px;
-    height: 2.5em;
+    height: 3em;
     border-bottom: 1px solid var(--border-light);
     position: sticky;
     top: 0;
